* https://github.com/svenkubiak/mangooio/issues/122[#122] Fixed inconsistency configuration controller package (MrDunne)
* https://github.com/svenkubiak/mangooio/issues/109[#109] Refactored Config (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/120[#120] Added getAcceptLangauge to Request (MrDunne)
* https://github.com/svenkubiak/mangooio/issues/121[#121] Updated readme (MrDunne)
* Removed Mangoo.TEST enum in test utilities (svenkubiak)
* Removed cache provider (svenkubiak)
* Refactored LocaleHandler (svenkubiak)
* Sonar refactorings (svenkubiak)
* Updated documentation (svenkubiak)
* Version bumps (svenkubiak)
** mockito 2.0.36-Beta -> 2.0.38-Beta
** dsiutils 2.2.5 -> 2.2.6

== Version 2.2.0

[small]#Released at 10.01.2016#

* https://github.com/svenkubiak/mangooio/issues/110[#110] Added X-Response-Header (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/108[#108] Refactored RequestHandler (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/98[#98] Improved RequestHandler (svenkubiak)
* Added LocalDateTime timestamp of application start (svenkubiak)
* Added new Benchmark project (svenkubiak)
* Improved application startup time (svenkubiak)
* Updated documentation (svenkubiak)
* Version bumps (svenkubiak)
** undertow-core 1.3.10.Final -> 1.3.12.Final
** bcprov-jdk15on 1.53 -> 1.54
** mockito 2.0.33-Beta -> 2.0.36-Beta

== Version 2.1.0

[small]#Released at 21.12.2015#

* https://github.com/svenkubiak/mangooio/issues/103[#103] Fixed bug when cookie encryption was enabled (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/102[#102] Made Cache eviction configurable (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/101[#101] Fixed keys in archetype (MarkVink)
* https://github.com/svenkubiak/mangooio/issues/97[#97] Fixed incorrect Form documentation (svenkubiak, MarkVink)
* https://github.com/svenkubiak/mangooio/issues/94[#95] Added new @memory administrative URL (svenkubiak)