@@ -9,6 +9,7 @@
 * https://github.com/svenkubiak/mangooio/issues/109[#109] Refactored Config (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/120[#120] Added getAcceptLangauge to Request (MrDunne)
 * https://github.com/svenkubiak/mangooio/issues/121[#121] Updated readme (MrDunne)
+* Added an option to add a custom cookie in test utilities request method (svenkubiak)
 * Removed Mangoo.TEST enum in test utilities (svenkubiak)
 * Removed cache provider (svenkubiak)
 * Refactored LocaleHandler (svenkubiak)
